tools/witx/tests/witxt/simple.witxt
(witx)

(witx
  (typename $x u32)
)

(assert_invalid
  (witx
    (typename $x u32)
    (typename $x u32)
  )
  "Redefinition of name `x`")
